--- a/src/monoko/ui/mainMenu.fxml
+++ b/src/monoko/ui/mainMenu.fxml
@@ -2,27 +2,24 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane minHeight="600.0" minWidth="800.0" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="monoko.ui.MainMenuController">
-  <bottom>
-    <VBox id="VBox" alignment="CENTER" minHeight="500.0" minWidth="800.0" prefHeight="-1.0" prefWidth="-1.0" spacing="25.0">
-      <children>
-        <Button fx:id="_playButton" mnemonicParsing="false" onAction="#onPlayButtonClicked" prefHeight="35.0" prefWidth="200.0" text="Play" />
-        <Button fx:id="_teamEditorButton" mnemonicParsing="false" onAction="#onTeamEditorButtonClicked" prefHeight="35.0" prefWidth="200.0" text="Team Editor" />
-        <Button fx:id="_helpButton" mnemonicParsing="false" onAction="#onHelpButtonClicked" prefHeight="35.0" prefWidth="200.0" text="Help" />
-        <Button fx:id="_loreButton" mnemonicParsing="false" onAction="#onLoreButtonClicked" prefHeight="35.0" prefWidth="200.0" text="Lore" />
-        <Button fx:id="_quitButton" mnemonicParsing="false" onAction="#onQuitButtonClicked" prefHeight="35.0" prefWidth="200.0" text="Quit" />
-      </children>
-      <BorderPane.margin>
-        <Insets />
-      </BorderPane.margin>
-    </VBox>
-  </bottom>
-  <top>
-    <Label id="titleLabel" fx:id="_titleLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="100.0" minWidth="800.0" prefHeight="-1.0" prefWidth="-1.0" text="Monoko" />
-  </top>
-</BorderPane>
+<VBox id="_mainMenuVBox" fx:id="_mainMenuVBox" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0" alignment="CENTER" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" spacing="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+  <children>
+    <Label id="titleLabel" alignment="CENTER" contentDisplay="CENTER" minHeight="100.0" minWidth="200.0" text="Monoko">
+      <font>
+        <Font size="42.0" />
+      </font>
+    </Label>
+    <Pane maxHeight="200.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
+    <Button id="_playButton" contentDisplay="CENTER" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onPlayButtonClicked" text="Play" />
+    <Button id="_teamEditorButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onTeamEditorButtonClicked" text="Team Editor" />
+    <Button id="_helpButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onHelpButtonClicked" text="Help" />
+    <Button id="_loreButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onLoreButtonClicked" text="Lore" />
+    <Button id="_quitButton" minHeight="50.0" minWidth="150.0" mnemonicParsing="false" onAction="#onQuitButtonClicked" text="Quit" />
+    <Pane prefHeight="-1.0" prefWidth="-1.0" />
+  </children>
+</VBox>
