skill bar not working yet

--- a/src/monoko/ui/game.fxml
+++ b/src/monoko/ui/game.fxml
@@ -9,6 +9,6 @@
 
 <VBox fx:id="root" alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <HBox fx:id="gameHBox" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
+    <HBox fx:id="gameHBox" maxHeight="1030.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
   </children>
 </VBox>
