--- a/src/monoko/ui/game.fxml
+++ b/src/monoko/ui/game.fxml
@@ -2,13 +2,10 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox fx:id="root" alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
-  <children>
-    <HBox fx:id="gameHBox" maxHeight="1030.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
-  </children>
-</VBox>
+<StackPane fx:id="root" alignment="BOTTOM_CENTER" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" />
