--- a/src/monoko/ui/skillBar.fxml
+++ b/src/monoko/ui/skillBar.fxml
@@ -7,4 +7,4 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<ToolBar id="skillToolBar" fx:id="_skillToolBar" maxHeight="100.0" maxWidth="1.7976931348623157E308" minHeight="50.0" minWidth="1080.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" />
+<ToolBar id="skillToolBar" fx:id="_skillToolBar" blendMode="SRC_OVER" maxHeight="50.0" maxWidth="1.7976931348623157E308" minHeight="50.0" minWidth="1080.0" style="-fx-background-color: #5e4d41;&#10;-fx-background-radius: 20;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" />
