--- a/src/monoko/ui/teamEditor.fxml
+++ b/src/monoko/ui/teamEditor.fxml
@@ -7,15 +7,32 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<HBox alignment="TOP_CENTER" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <FlowPane prefHeight="-1.0" prefWidth="-1.0">
+    <VBox alignment="CENTER" maxHeight="-1.0" maxWidth="960.0" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0" HBox.hgrow="ALWAYS">
       <children>
-        <Button mnemonicParsing="false" text="Button" />
-        <Button mnemonicParsing="false" text="Button" />
-        <Button mnemonicParsing="false" text="Button" />
+        <Label alignment="CENTER" minHeight="50.0" minWidth="200.0" text="Characters">
+          <font>
+            <Font size="24.0" fx:id="x1" />
+          </font>
+        </Label>
+        <Separator prefWidth="-1.0" />
+        <FlowPane fx:id="_charactersFlowpane" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
+        <Separator prefWidth="-1.0" />
+        <Button fx:id="_createCharacterButton" font="$x1" minHeight="50.0" minWidth="250.0" mnemonicParsing="false" text="Create Character" />
+        <Pane minHeight="10.0" prefHeight="-1.0" prefWidth="-1.0" />
       </children>
-    </FlowPane>
-    <HBox prefHeight="-1.0" prefWidth="-1.0" />
+    </VBox>
+    <Separator maxHeight="950.0" orientation="VERTICAL" prefHeight="-1.0" />
+    <VBox alignment="CENTER" maxHeight="-1.0" maxWidth="960.0" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0" HBox.hgrow="ALWAYS">
+      <children>
+        <Label alignment="CENTER" font="$x1" minHeight="50.0" minWidth="200.0" text="Teams" />
+        <Separator prefWidth="-1.0" />
+        <VBox fx:id="_teamsVBox" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
+        <Separator prefWidth="-1.0" />
+        <Button fx:id="_createTeamButton" font="$x1" minHeight="50.0" minWidth="250.0" mnemonicParsing="false" text="Create Team" />
+        <Pane minHeight="10.0" prefHeight="-1.0" prefWidth="-1.0" />
+      </children>
+    </VBox>
   </children>
-</VBox>
+</HBox>
