--- a/src/monoko/ui/teamEditor.fxml
+++ b/src/monoko/ui/teamEditor.fxml
@@ -19,7 +19,7 @@
         <Separator prefWidth="-1.0" />
         <FlowPane fx:id="_charactersFlowpane" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
         <Separator prefWidth="-1.0" />
-        <Button fx:id="_createCharacterButton" font="$x1" minHeight="50.0" minWidth="250.0" mnemonicParsing="false" text="Create Character" />
+        <Button fx:id="_createCharacterButton" font="$x1" minHeight="50.0" minWidth="250.0" mnemonicParsing="false" onAction="#onCreateCharacterClicked" text="Create Character" />
         <Pane minHeight="10.0" prefHeight="-1.0" prefWidth="-1.0" />
       </children>
     </VBox>
@@ -30,7 +30,7 @@
         <Separator prefWidth="-1.0" />
         <VBox fx:id="_teamsVBox" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
         <Separator prefWidth="-1.0" />
-        <Button fx:id="_createTeamButton" font="$x1" minHeight="50.0" minWidth="250.0" mnemonicParsing="false" text="Create Team" />
+        <Button fx:id="_createTeamButton" font="$x1" minHeight="50.0" minWidth="250.0" mnemonicParsing="false" onAction="#onCreateTeamClicked" text="Create Team" />
         <Pane minHeight="10.0" prefHeight="-1.0" prefWidth="-1.0" />
       </children>
     </VBox>
