--- a/src/monoko/ui/character.fxml
+++ b/src/monoko/ui/character.fxml
@@ -3,22 +3,24 @@
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<HBox minHeight="150.0" minWidth="200.0" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<HBox minHeight="150.0" minWidth="200.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #5e4d41;&#10;-fx-background-radius: 10;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
     <VBox fx:id="_" alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
       <children>
+        <ImageView fx:id="_classImageview" fitHeight="145.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true" />
         <Label fx:id="_nameLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Name" />
         <Pane minHeight="10.0" prefHeight="-1.0" prefWidth="-1.0" />
       </children>
     </VBox>
     <VBox alignment="CENTER" minWidth="50.0" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0">
       <children>
-        <Button fx:id="_editButton" maxHeight="-1.0" maxWidth="-1.0" mnemonicParsing="false" onAction="#onEditClicked" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: url('/textures/edit.png');" text="" />
-        <Button fx:id="_deleteButton" maxHeight="-1.0" maxWidth="-1.0" mnemonicParsing="false" onAction="#onDeleteClicked" prefHeight="50.0" prefWidth="50.0" text="" />
+        <Button fx:id="_editButton" maxHeight="-1.0" maxWidth="-1.0" mnemonicParsing="false" onAction="#onEditClicked" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: url('/textures/edit.png');&#10;-fx-background-radius: 10;" text="" />
+        <Button fx:id="_deleteButton" maxHeight="-1.0" maxWidth="-1.0" mnemonicParsing="false" onAction="#onDeleteClicked" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: url('/textures/delete2.png');&#10;-fx-background-radius: 10;" text="" />
       </children>
     </VBox>
     <Pane minWidth="5.0" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="NEVER" />
