--- a/src/monoko/ui/skill.fxml
+++ b/src/monoko/ui/skill.fxml
@@ -10,6 +10,6 @@
 
 <VBox id="VBox" alignment="CENTER" spacing="0.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <Button fx:id="_skillButton" mnemonicParsing="false" style="-fx-background-radius: 50;" text="" />
+    <Button fx:id="_skillButton" mnemonicParsing="false" onAction="#onSkillClicked" style="-fx-background-radius: 50;" text="" />
   </children>
 </VBox>
