--- a/src/monoko/ui/character.fxml
+++ b/src/monoko/ui/character.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<HBox minHeight="150.0" minWidth="200.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #5e4d41;&#10;-fx-background-radius: 10;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<HBox fx:id="_rootHBox" minHeight="150.0" minWidth="200.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #5e4d41;&#10;-fx-background-radius: 10;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <VBox fx:id="_" alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+    <VBox id="_" alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
       <children>
         <ImageView fx:id="_classImageview" fitHeight="145.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true" />
         <Label fx:id="_nameLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Name">
