--- a/src/monoko/ui/team.fxml
+++ b/src/monoko/ui/team.fxml
@@ -8,4 +8,8 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<TitledPane fx:id="_teamTitledPane" animated="false" content="$null" maxWidth="1.7976931348623157E308" text="Team Name" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" />
+<TitledPane fx:id="_teamTitledPane" animated="true" maxWidth="1.7976931348623157E308" text="Team Name" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+  <content>
+    <HBox fx:id="_teamsHBox" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" minHeight="200.0" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0" />
+  </content>
+</TitledPane>
