--- a/src/monoko/ui/character.fxml
+++ b/src/monoko/ui/character.fxml
@@ -13,9 +13,9 @@
     <VBox id="_" alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
       <children>
         <ImageView fx:id="_classImageview" fitHeight="145.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true" />
-        <Label fx:id="_nameLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Name">
+        <Label fx:id="_nameLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Name" textFill="WHITE">
           <font>
-            <Font size="16.0" />
+            <Font size="18.0" />
           </font>
         </Label>
         <Pane minHeight="10.0" prefHeight="-1.0" prefWidth="-1.0" />
