--- a/src/monoko/ui/team.fxml
+++ b/src/monoko/ui/team.fxml
@@ -10,7 +10,15 @@
 
 <TitledPane fx:id="_teamTitledPane" alignment="CENTER_LEFT" animated="true" maxWidth="1.7976931348623157E308" text="Team Name" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <content>
-    <HBox fx:id="_teamsHBox" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" minHeight="200.0" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0" />
+    <HBox fx:id="_teamsHBox" alignment="CENTER" maxWidth="1.7976931348623157E308" minHeight="200.0" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0">
+      <children>
+        <Label fx:id="_dragLabel" text="Drag and Drop characters here" textFill="#808080">
+          <font>
+            <Font size="24.0" />
+          </font>
+        </Label>
+      </children>
+    </HBox>
   </content>
   <graphic>
     <Button fx:id="_deleteButton" mnemonicParsing="false" onAction="#onDeleteClicked" text="X" />
