--- a/src/monoko/ui/lobby.fxml
+++ b/src/monoko/ui/lobby.fxml
@@ -12,156 +12,44 @@
 
 <VBox fx:id="_rootVBox" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="720.0" minWidth="1280.0" prefHeight="-1.0" prefWidth="-1.0" style="" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
-    <HBox alignment="CENTER" maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <HBox alignment="TOP_CENTER" maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label fx:id="_titleLabel" alignment="CENTER" contentDisplay="CENTER" minHeight="50.0" minWidth="300.0" text="Character Creation">
+        <Label fx:id="_titleLabel" alignment="CENTER" contentDisplay="CENTER" minHeight="50.0" minWidth="300.0" text="Lobby">
           <font>
             <Font size="24.0" fx:id="x1" />
           </font>
         </Label>
       </children>
     </HBox>
-    <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0" VBox.vgrow="ALWAYS">
+    <HBox alignment="CENTER" maxHeight="800.0" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" />
-        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="375.0" minWidth="275.0" text="Soul Class" underline="false" HBox.hgrow="ALWAYS">
-          <content>
-            <HBox id="HBox" alignment="CENTER" spacing="5.0">
-              <children>
-                <Pane prefHeight="-1.0" prefWidth="-1.0" />
-                <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0" HBox.hgrow="ALWAYS">
-                  <children>
-                    <Pane prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="NEVER" />
-                    <ComboBox id="classComboBox" fx:id="_jobComboBox" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER" />
-                    <AnchorPane id="AnchorPane" fx:id="_jobAnchorPane" minWidth="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                      <children>
-                        <ImageView id="classImageView" fx:id="_jobImageView" fitHeight="150.0" fitWidth="200.0" layoutX="42.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="0.0" />
-                      </children>
-                    </AnchorPane>
-                    <Button fx:id="jobInfoButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Informations" visible="true" VBox.vgrow="NEVER" />
-                    <Pane prefHeight="-1.0" prefWidth="-1.0" />
-                  </children>
-                </VBox>
-                <Pane prefHeight="-1.0" prefWidth="-1.0" />
-              </children>
-            </HBox>
-          </content>
+        <Pane minWidth="10.0" prefHeight="-1.0" prefWidth="-1.0" />
+        <TitledPane fx:id="_playersTitledPane" alignment="CENTER" animated="false" collapsible="false" content="$null" contentDisplay="RIGHT" maxHeight="750.0" maxWidth="550.0" text="Connected Players" HBox.hgrow="ALWAYS">
+          <font>
+            <Font size="20.0" fx:id="x2" />
+          </font>
         </TitledPane>
-        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="375.0" minWidth="275.0" text="Deity Worshiped" HBox.hgrow="ALWAYS">
-          <content>
-            <HBox id="HBox" alignment="CENTER" spacing="5.0">
-              <children>
-                <Pane prefHeight="-1.0" prefWidth="-1.0" />
-                <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0" HBox.hgrow="ALWAYS">
-                  <children>
-                    <Pane prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="NEVER" />
-                    <ComboBox id="godComboBox" fx:id="_godComboBox" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER" />
-                    <AnchorPane id="AnchorPane" minWidth="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                      <children>
-                        <ImageView id="classImageView" fx:id="_godImageView" fitHeight="150.0" fitWidth="200.0" layoutX="42.0" layoutY="0.0" pickOnBounds="true" preserveRatio="true" />
-                      </children>
-                    </AnchorPane>
-                    <Button fx:id="godInfoButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Informations" visible="true" VBox.vgrow="NEVER" />
-                    <Pane prefHeight="-1.0" prefWidth="-1.0" />
-                  </children>
-                </VBox>
-                <Pane prefHeight="-1.0" prefWidth="-1.0" />
-              </children>
-            </HBox>
-          </content>
-        </TitledPane>
-        <VBox id="VBox" alignment="TOP_CENTER" minWidth="600.0" spacing="5.0" HBox.hgrow="ALWAYS">
+        <Pane minWidth="10.0" prefHeight="-1.0" prefWidth="-1.0" />
+        <TitledPane fx:id="_invitationsTitledPane" alignment="CENTER" animated="false" collapsible="false" content="$null" contentDisplay="RIGHT" font="$x2" maxHeight="750.0" maxWidth="550.0" text="Game Invitations" HBox.hgrow="ALWAYS" />
+        <Pane minWidth="10.0" prefHeight="-1.0" prefWidth="-1.0" />
+        <VBox alignment="TOP_CENTER" minWidth="100.0" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0" HBox.hgrow="ALWAYS">
           <children>
-            <TitledPane animated="false" collapsible="false" maxHeight="250.0" maxWidth="1025.0" minHeight="200.0" minWidth="600.0" text="Weapons &amp; Items" VBox.vgrow="ALWAYS">
-              <content>
-                <VBox id="VBox" alignment="TOP_LEFT" spacing="5.0">
-                  <children>
-                    <Pane prefHeight="-1.0" prefWidth="-1.0" />
-                    <ComboBox id="itemsComboBox" fx:id="_itemsComboBox" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER">
-                      <VBox.margin>
-                        <Insets />
-                      </VBox.margin>
-                    </ComboBox>
-                    <HBox prefHeight="-1.0" prefWidth="-1.0" spacing="5.0">
-                      <children>
-                        <Pane prefHeight="-1.0" prefWidth="-1.0" />
-                        <Label minWidth="75.0" text="Class Item : ">
-                          <font>
-                            <Font size="14.0" />
-                          </font>
-                        </Label>
-                        <VBox fx:id="_predilectionVBox" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-                      </children>
-                    </HBox>
-                    <Separator prefWidth="-1.0" VBox.vgrow="NEVER">
-                      <VBox.margin>
-                        <Insets />
-                      </VBox.margin>
-                    </Separator>
-                    <VBox fx:id="_itemsVBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0" VBox.vgrow="ALWAYS">
-                      <VBox.margin>
-                        <Insets />
-                      </VBox.margin>
-                    </VBox>
-                  </children>
-                </VBox>
-              </content>
-            </TitledPane>
-            <VBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0" VBox.vgrow="ALWAYS">
-              <children>
-                <Label font="$x1" text="Attributes" />
-                <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
-                  <children>
-                    <Label minWidth="100.0" text="Health">
-                      <font>
-                        <Font size="18.0" fx:id="x2" />
-                      </font>
-                    </Label>
-                    <Label fx:id="_hpValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
-                  </children>
-                </HBox>
-                <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
-                  <children>
-                    <Label font="$x2" minWidth="100.0" text="Strength" />
-                    <Label fx:id="_strValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
-                  </children>
-                </HBox>
-                <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
-                  <children>
-                    <Label font="$x2" minWidth="100.0" text="Dexterity" />
-                    <Label fx:id="_dexValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
-                  </children>
-                </HBox>
-                <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
-                  <children>
-                    <Label font="$x2" minWidth="100.0" text="Intelligence" />
-                    <Label fx:id="_intValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
-                  </children>
-                </HBox>
-                <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
-                  <children>
-                    <Label font="$x2" minWidth="100.0" text="Speed" />
-                    <Label fx:id="_spdValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
-                  </children>
-                </HBox>
-              </children>
-            </VBox>
+            <Label alignment="CENTER" font="$x2" maxWidth="1.7976931348623157E308" text="Choose your Team : " />
+            <ComboBox fx:id="_teamsComboBox" maxWidth="200.0" VBox.vgrow="ALWAYS">
+              <items>
+                <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="Item 1" />
+                  <String fx:value="Item 2" />
+                  <String fx:value="Item 3" />
+                </FXCollections>
+              </items>
+              <VBox.margin>
+                <Insets />
+              </VBox.margin>
+            </ComboBox>
+            <Button fx:id="_mainMenuButton" font="$x1" minHeight="50.0" mnemonicParsing="false" onAction="#onMainMenuClicked" text="Main Menu" />
           </children>
         </VBox>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" />
-      </children>
-    </HBox>
-    <HBox alignment="CENTER" maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0" VBox.vgrow="ALWAYS">
-      <children>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" />
-        <Label alignment="CENTER" font="$x1" minHeight="50.0" minWidth="100.0" text="Name : " HBox.hgrow="NEVER" />
-        <TextField fx:id="_nameTextfield" maxWidth="500.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label alignment="CENTER" contentDisplay="CENTER" font="$x1" minHeight="50.0" minWidth="50.0" text="Cost : " />
-        <Label fx:id="_costValueLabel" alignment="CENTER" font="$x1" minHeight="50.0" minWidth="50.0" text="15" />
-        <Pane maxWidth="860.0" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Button id="createCharacterButton" fx:id="_createCharacterButton" font="$x1" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" onAction="#onCreateCharacterButtonClicked" text="Create Character" HBox.hgrow="NEVER" />
-        <Pane prefHeight="-1.0" prefWidth="-1.0" />
       </children>
     </HBox>
   </children>
