--- a/src/monoko/ui/characterCreation.fxml
+++ b/src/monoko/ui/characterCreation.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox fx:id="_rootVBox" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="720.0" minWidth="1280.0" prefHeight="-1.0" prefWidth="-1.0" style="" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<VBox fx:id="_rootVBox" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="720.0" minWidth="1280.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-image: url(&quot;/textures/bg.jpg&quot;);&#10;-fx-background-position: center;&#10;-fx-background-size: cover;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
     <HBox alignment="CENTER" maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label fx:id="_titleLabel" alignment="CENTER" contentDisplay="CENTER" minHeight="50.0" minWidth="300.0" text="Character Creation">
+        <Label fx:id="_titleLabel" alignment="CENTER" contentDisplay="CENTER" minHeight="50.0" minWidth="300.0" text="Character Creation" textFill="WHITE">
           <font>
-            <Font size="24.0" fx:id="x1" />
+            <Font size="30.0" fx:id="x2" />
           </font>
         </Label>
       </children>
@@ -24,7 +24,7 @@
     <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0" VBox.vgrow="ALWAYS">
       <children>
         <Pane prefHeight="-1.0" prefWidth="-1.0" />
-        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="375.0" minWidth="275.0" text="Soul Class" underline="false" HBox.hgrow="ALWAYS">
+        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="375.0" minWidth="275.0" opacity="0.8" text="Soul Class" underline="false" HBox.hgrow="ALWAYS">
           <content>
             <HBox id="HBox" alignment="CENTER" spacing="5.0">
               <children>
@@ -47,7 +47,7 @@
             </HBox>
           </content>
         </TitledPane>
-        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="375.0" minWidth="275.0" text="Deity Worshiped" HBox.hgrow="ALWAYS">
+        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="375.0" minWidth="275.0" opacity="0.8" text="Deity Worshiped" HBox.hgrow="ALWAYS">
           <content>
             <HBox id="HBox" alignment="CENTER" spacing="5.0">
               <children>
@@ -72,7 +72,7 @@
         </TitledPane>
         <VBox id="VBox" alignment="TOP_CENTER" minWidth="600.0" spacing="5.0" HBox.hgrow="ALWAYS">
           <children>
-            <TitledPane animated="false" collapsible="false" maxHeight="250.0" maxWidth="1025.0" minHeight="200.0" minWidth="600.0" text="Weapons &amp; Items" VBox.vgrow="ALWAYS">
+            <TitledPane animated="false" collapsible="false" maxHeight="250.0" maxWidth="1025.0" minHeight="200.0" minWidth="600.0" opacity="0.8" text="Weapons &amp; Items" VBox.vgrow="ALWAYS">
               <content>
                 <VBox id="VBox" alignment="TOP_LEFT" spacing="5.0">
                   <children>
@@ -109,39 +109,39 @@
             </TitledPane>
             <VBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0" VBox.vgrow="ALWAYS">
               <children>
-                <Label font="$x1" text="Attributes" />
+                <Label font="$x2" text="Attributes" textFill="WHITE" />
                 <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
                   <children>
-                    <Label minWidth="100.0" text="Health">
+                    <Label minWidth="100.0" text="Health" textFill="WHITE">
                       <font>
-                        <Font size="18.0" fx:id="x2" />
+                        <Font size="24.0" fx:id="x1" />
                       </font>
                     </Label>
-                    <Label fx:id="_hpValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
+                    <Label fx:id="_hpValueLabel" alignment="CENTER" font="$x1" minWidth="50.0" text="0" textFill="WHITE" />
                   </children>
                 </HBox>
                 <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
                   <children>
-                    <Label font="$x2" minWidth="100.0" text="Strength" />
-                    <Label fx:id="_strValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
+                    <Label font="$x1" minWidth="100.0" text="Strength" textFill="WHITE" />
+                    <Label fx:id="_strValueLabel" alignment="CENTER" font="$x1" minWidth="50.0" text="0" textFill="WHITE" />
                   </children>
                 </HBox>
                 <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
                   <children>
-                    <Label font="$x2" minWidth="100.0" text="Dexterity" />
-                    <Label fx:id="_dexValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
+                    <Label font="$x1" minWidth="100.0" text="Dexterity" textFill="WHITE" />
+                    <Label fx:id="_dexValueLabel" alignment="CENTER" font="$x1" minWidth="50.0" text="0" textFill="WHITE" />
                   </children>
                 </HBox>
                 <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
                   <children>
-                    <Label font="$x2" minWidth="100.0" text="Intelligence" />
-                    <Label fx:id="_intValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
+                    <Label font="$x1" minWidth="100.0" text="Intelligence" textFill="WHITE" />
+                    <Label fx:id="_intValueLabel" alignment="CENTER" font="$x1" minWidth="50.0" text="0" textFill="WHITE" />
                   </children>
                 </HBox>
                 <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" VBox.vgrow="ALWAYS">
                   <children>
-                    <Label font="$x2" minWidth="100.0" text="Speed" />
-                    <Label fx:id="_spdValueLabel" alignment="CENTER" font="$x2" minWidth="50.0" text="0" />
+                    <Label font="$x1" minWidth="100.0" text="Speed" textFill="WHITE" />
+                    <Label fx:id="_spdValueLabel" alignment="CENTER" font="$x1" minWidth="50.0" text="0" textFill="WHITE" />
                   </children>
                 </HBox>
               </children>
@@ -154,11 +154,11 @@
     <HBox alignment="CENTER" maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0" VBox.vgrow="ALWAYS">
       <children>
         <Pane prefHeight="-1.0" prefWidth="-1.0" />
-        <Label alignment="CENTER" font="$x1" minHeight="50.0" minWidth="100.0" text="Name : " HBox.hgrow="NEVER" />
+        <Label alignment="CENTER" font="$x1" minHeight="50.0" minWidth="100.0" text="Name : " textFill="WHITE" HBox.hgrow="NEVER" />
         <TextField fx:id="_nameTextfield" maxWidth="500.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
         <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label alignment="CENTER" contentDisplay="CENTER" font="$x1" minHeight="50.0" minWidth="50.0" text="Cost : " />
-        <Label fx:id="_costValueLabel" alignment="CENTER" font="$x1" minHeight="50.0" minWidth="50.0" text="15" />
+        <Label alignment="CENTER" contentDisplay="CENTER" font="$x1" minHeight="50.0" minWidth="50.0" text="Cost : " textFill="WHITE" />
+        <Label fx:id="_costValueLabel" alignment="CENTER" font="$x1" minHeight="50.0" minWidth="50.0" text="15" textFill="WHITE" />
         <Pane maxWidth="860.0" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
         <Button id="createCharacterButton" fx:id="_createCharacterButton" font="$x1" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" onAction="#onCreateCharacterButtonClicked" text="Create Character" HBox.hgrow="NEVER" />
         <Pane prefHeight="-1.0" prefWidth="-1.0" />
